tests/reference/llvm-external_01-b8f6233.stderr
semantic error: External function `enorm` return type must be `real`
 --> tests/errors/external_01.f90:2:5
  |
2 |     external :: enorm
  |     ^^^^^^^^^^^^^^^^^ 
